# neural-networks

./: README.md  pyproject.toml  xor-nn.ipynb
