[project]
name = "neural-networks"
version = "0.1.0"
description = "Series of NN build by scratch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tensorflow>=2.19.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
